--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - master
       - release-*
+      - dev-*
+      - feature-*
     tags:
       - v*
     
@@ -12,6 +14,13 @@ on:
     branches: 
     - master
     - release-*
+    - dev-*
+    - feature-*
+
+  workflow_run:
+    workflows: [ "integration-test" ]
+    types:
+      - completed
 
 jobs:
   build:
