--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - master
       - release-*
+      - dev-*
+      - feature-*
     tags:
       - v*
     
@@ -12,6 +14,13 @@ on:
     branches: 
     - master
     - release-*
+    - dev-*
+    - feature-*
+
+  workflow_run:
+    workflows: [ "integration-test" ]
+    types:
+      - completed
 
 jobs:
   build:
@@ -117,7 +126,11 @@ jobs:
     name: Publish Packages
     needs: ['build', 'test']
     runs-on: ubuntu-latest
-    if: startswith(github.ref, 'refs/tags/v') && !(endsWith(github.ref, '-rc') || endsWith(github.ref, '-dev') || endsWith(github.ref, '-prerelease'))
+    # Only run this job if workflow_run was successful and we're on a tag
+    if: |
+      (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') &&
+            startswith(github.ref, 'refs/tags/v') && 
+            !(endsWith(github.ref, '-rc') || endsWith(github.ref, '-dev') || endsWith(github.ref, '-prerelease'))
     steps:
     - name: Download release artifacts
       uses: actions/download-artifact@v4
