Add A2A implementation for TaskStore
Signed-off-by: yaron2 <schneider.yaron@live.com>

--- a/src/Dapr.AI/Dapr.AI.csproj
+++ b/src/Dapr.AI/Dapr.AI.csproj
@@ -19,8 +19,13 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="A2A" />
+    </ItemGroup>
+    
+    <ItemGroup>
         <ProjectReference Include="..\Dapr.Common\Dapr.Common.csproj" />
         <ProjectReference Include="..\Dapr.Protos\Dapr.Protos.csproj" />
+        <ProjectReference Include="..\Dapr.Client\Dapr.Client.csproj" />
     </ItemGroup>
     
 </Project>
