Add Dapr’s gRPC proxying capability example (#1525)
* Add Dapr’s gRPC proxying capability example

Signed-off-by: ercJuL <1552930110@qq.com>

* Update examples/AspNetCore/GrpcServiceSample/Services/GreeterService.cs

Co-authored-by: Christopher Watford <83599748+watfordsuzy@users.noreply.github.com>
Signed-off-by: ercJuL <1552930110@qq.com>

---------

Signed-off-by: ercJuL <1552930110@qq.com>
Co-authored-by: Christopher Watford <83599748+watfordsuzy@users.noreply.github.com>
Co-authored-by: Whit Waldo <whit.waldo@innovian.net>

--- a/examples/Client/ServiceInvocation/ServiceInvocation.csproj
+++ b/examples/Client/ServiceInvocation/ServiceInvocation.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="..\..\AspNetCore\GrpcServiceSample\Protos\*.proto" ProtoRoot="..\..\AspNetCore\GrpcServiceSample\Protos\" GrpcServices="None" />
+    <Protobuf Include="..\..\AspNetCore\GrpcServiceSample\Protos\*.proto" ProtoRoot="..\..\AspNetCore\GrpcServiceSample\Protos\" GrpcServices="Client" />
   </ItemGroup>
 
   <ItemGroup>
