--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -1,22 +1,5 @@
 name: integration-test
 
-on: 
-  push:
-    branches:
-      - master
-      - release-*
-      - dev-*
-      - feature-*
-    tags:
-      - v*
-    
-  pull_request:
-    branches: 
-    - master
-    - release-*
-    - dev-*
-    - feature-*
-
 jobs:
   build:
     name: run integration tests
@@ -42,9 +25,9 @@ jobs:
       GOOS: linux
       GOARCH: amd64
       GOPROXY: https://proxy.golang.org
+      DAPR_RUNTIME_VER: 1.16.0-rc.3
       DAPR_CLI_VER: 1.15.2
-      DAPR_RUNTIME_VER: 1.15.9
-      DAPR_INSTALL_URL: https://raw.githubusercontent.com/dapr/cli/release-1.15/install/install.sh
+      DAPR_INSTALL_URL: https://raw.githubusercontent.com/dapr/cli/release-1.15.2/install/install.sh
       DAPR_CLI_REF: ''
     steps:
       - name: Set up Dapr CLI
