--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -28,8 +28,8 @@ jobs:
       GOOS: linux
       GOARCH: amd64
       GOPROXY: https://proxy.golang.org
-      DAPR_RUNTIME_VER: 1.16.0-rc.3
       DAPR_CLI_VER: 1.15.0
+      DAPR_RUNTIME_VER: 1.15.3
       DAPR_INSTALL_URL: https://raw.githubusercontent.com/dapr/cli/release-1.15.0/install/install.sh
       DAPR_CLI_REF: ''
     steps:
