Moved integration tests back outside the build file
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -1,7 +1,21 @@
 name: integration-test
 
 on:
-  workflow_call:
+  push:
+    branches:
+      - master
+      - release-*
+      - dev-*
+      - feature-*
+    tags:
+      - v*
+  
+  pull_request:
+    branches:
+      - master
+      - release-*
+      - dev-*
+      - feature-*
 
 jobs:
   build:
