--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    name: run integration tests
+    name: Integration Tests
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
