Fixed generate matrix output in discover step
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -139,7 +139,7 @@ jobs:
         id: set-matrix
         run: |
           echo "Generating package matrix..."
-          filtes=$(ls packages/*.nupkg | jq -R -s -c 'split("\n")[:-1]')
+          files=$(ls packages/*.nupkg | jq -R -s -c 'split("\n")[:-1]')
           echo "matrix=$files" >> $GITHUB_OUTPUT
   
   publish:
