Fixed matrix reference in publish step
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -152,7 +152,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package: ${{ fromJson(needs.discover-packages.outputs.matrix) }}
+        package: ${{ fromJson(needs.discover.outputs.matrix) }}
     steps:
       - name: Download release artifacts
         uses: actions/download-artifact@v4
