Updating publish files (#1602)
* Updated integration tests name

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Fixed generate matrix output in discover step

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

* Fixed matrix reference in publish step

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

---------

Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -139,7 +139,7 @@ jobs:
         id: set-matrix
         run: |
           echo "Generating package matrix..."
-          filtes=$(ls packages/*.nupkg | jq -R -s -c 'split("\n")[:-1]')
+          files=$(ls packages/*.nupkg | jq -R -s -c 'split("\n")[:-1]')
           echo "matrix=$files" >> $GITHUB_OUTPUT
   
   publish:
@@ -152,7 +152,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package: ${{ fromJson(needs.discover-packages.outputs.matrix) }}
+        package: ${{ fromJson(needs.discover.outputs.matrix) }}
     steps:
       - name: Download release artifacts
         uses: actions/download-artifact@v4
