Restored flag to not require signed imports
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/src/Dapr.AI.A2A/Dapr.AI.A2A.csproj
+++ b/src/Dapr.AI.A2A/Dapr.AI.A2A.csproj
@@ -9,6 +9,10 @@
         <VersionSuffix>alpha</VersionSuffix>
     </PropertyGroup>
     
+    <PropertyGroup>
+        <SignAssembly>false</SignAssembly>
+    </PropertyGroup>
+
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
