Updated property group values to remove framework
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/src/Dapr.AI.DotnetExtensions/Dapr.AI.DotnetExtensions.csproj
+++ b/src/Dapr.AI.DotnetExtensions/Dapr.AI.DotnetExtensions.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <PackageId>Dapr.AI.DotnetExtensions</PackageId>
         <Nullable>enable</Nullable>
+        <PackageId>Dapr.AI.DotnetExtensions</PackageId>
+        <Title>Dapr .NET AI Implementation</Title>
         <Description>Dapr AI implementation for performing operations with the .NET AI extensions.</Description>
+        <VersionSuffix>alpha</VersionSuffix>
     </PropertyGroup>
 
     <ItemGroup>
