Renamed new project as Dapr.AI.Microsoft.Extensions for clarity from Dapr.AI.DotnetExtensions
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/examples/AI/MicrosoftAiExtensionsDemo/MicrosoftAiExtensionsDemo.csproj
+++ b/examples/AI/MicrosoftAiExtensionsDemo/MicrosoftAiExtensionsDemo.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\src\Dapr.AI.DotnetExtensions\Dapr.AI.DotnetExtensions.csproj" />
+      <ProjectReference Include="..\..\..\src\Dapr.AI.Microsoft.Extensions\Dapr.AI.Microsoft.Extensions.csproj" />
     </ItemGroup>
 
 </Project>
