Fixed project reference path in Dapr.Jobs.Analyzers test project
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/test/Dapr.Jobs.Analyzer.Test/Dapr.Jobs.Analyzers.Test.csproj
+++ b/test/Dapr.Jobs.Analyzer.Test/Dapr.Jobs.Analyzers.Test.csproj
@@ -24,8 +24,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\src\Dapr.Jobs.Analyzers\Dapr.Jobs.Analyzers.csproj" />
         <ProjectReference Include="..\..\src\Dapr.Jobs\Dapr.Jobs.csproj" />
-        <ProjectReference Include="..\..\src\Dapr.Jobs.Analyzer\Dapr.Jobs.Analyzers.csproj" />
         <ProjectReference Include="..\Dapr.Analyzers.Common\Dapr.Analyzers.Common.csproj" />
     </ItemGroup>
 
