Adding annotation to ignore prereq warning blocking successful build in Dapr.AI.A2A
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/src/Dapr.AI.A2A/Dapr.AI.A2A.csproj
+++ b/src/Dapr.AI.A2A/Dapr.AI.A2A.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
     
     <PropertyGroup>
+        <NoWarn>NU5104;</NoWarn>
         <SignAssembly>false</SignAssembly>
     </PropertyGroup>
 
