--- a/examples/Directory.Build.props
+++ b/examples/Directory.Build.props
@@ -2,7 +2,7 @@
   <Import Project="$(MSBuildThisFileDirectory)..\properties\dapr_managed_netcore.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>net8;net9</TargetFrameworks>
+    <TargetFrameworks>net8;net9;net10</TargetFrameworks>
     <!-- Set Output Path for samples-->
     <OutputPath>$(RepoRoot)bin\$(Configuration)\examples\$(MSBuildProjectName)\</OutputPath>
 
