--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -27,11 +27,21 @@ jobs:
       - uses: actions/checkout@v1
       - name: Parse release version
         run: python ./.github/scripts/get_release_version.py
-      - name: Setup .NET Core
+      - name: Setup .NET 8
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 8.0.x
+          dotnet-quality: 'ga'
+      - name: Setup .NET 9
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 9.0.x
           dotnet-quality: 'ga'
+      - name: Setup .NET 10
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: 10.0.x
+          dotnet-quality: 'preview'
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
