--- a/examples/Hosting/Aspire/ServiceInvocationDemo/ServiceInvocationDemo.AppHost/ServiceInvocationDemo.AppHost.csproj
+++ b/examples/Hosting/Aspire/ServiceInvocationDemo/ServiceInvocationDemo.AppHost/ServiceInvocationDemo.AppHost.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <Sdk Name="Aspire.AppHost.Sdk" Version="9.3.1"/>
+    <Sdk Name="Aspire.AppHost.Sdk" Version="13.0.2" />
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <WarningsAsErrors>false</WarningsAsErrors>
@@ -13,8 +14,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Aspire.Hosting.AppHost" Version="9.4.1" />
-        <PackageReference Include="CommunityToolkit.Aspire.Hosting.Dapr" Version="9.7.0" />
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="13.0.2" />
+        <PackageReference Include="CommunityToolkit.Aspire.Hosting.Dapr" Version="13.0.0" />
     </ItemGroup>
 
     <ItemGroup>
