Applied first pass to Dapr.Workflow.Abstractions, refactoring out the necessary types from Dapr.Workflow to generalize them and reworking to modernize and improve them
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/src/Dapr.Workflow/Dapr.Workflow.csproj
+++ b/src/Dapr.Workflow/Dapr.Workflow.csproj
@@ -7,16 +7,12 @@
     <Description>Dapr Workflow SDK for building workflows as code with Dapr</Description>
     <VersionSuffix>alpha</VersionSuffix>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Dapr.DurableTask.Client.Grpc" />
-    <PackageReference Include="Dapr.DurableTask.Worker.Grpc" />
-  </ItemGroup>
-
+  
   <ItemGroup>
     <ProjectReference Include="..\Dapr.Client\Dapr.Client.csproj" />
     <ProjectReference Include="..\Dapr.Common\Dapr.Common.csproj" />
     <ProjectReference Include="..\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
+    <ProjectReference Include="..\Dapr.Workflow.Abstractions\Dapr.Workflow.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
