--- a/src/Dapr.Workflow.Abstractions/Dapr.Workflow.Abstractions.csproj
+++ b/src/Dapr.Workflow.Abstractions/Dapr.Workflow.Abstractions.csproj
@@ -1,9 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>Dapr.Workflow.Abstractions</PackageId>
+        <Title>Dapr Workflow Abstractions</Title>
+        <Description>Provides abstractions for the Dapr Workflow SDK implementation.</Description>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging" />
+    </ItemGroup>
 
 </Project>
