Update to use DaprDefaults for consistent address resolution
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/src/Dapr.Workflow.Grpc/Dapr.Workflow.Grpc.csproj
+++ b/src/Dapr.Workflow.Grpc/Dapr.Workflow.Grpc.csproj
@@ -23,5 +23,9 @@
         <Protobuf Include="orchestrator_service.proto" GrpcServices="Client" />
         <Protobuf Include="runtime_state.proto" GrpcServices="None" />
     </ItemGroup>
+    
+    <ItemGroup>
+      <ProjectReference Include="..\Dapr.Common\Dapr.Common.csproj" />
+    </ItemGroup>
 
 </Project>
