Fixed example by restoring dependency on sample to Dapr.Client project
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/examples/Workflow/WorkflowConsoleApp/WorkflowConsoleApp.csproj
+++ b/examples/Workflow/WorkflowConsoleApp/WorkflowConsoleApp.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Dapr.Client\Dapr.Client.csproj" />
     <ProjectReference Include="..\..\..\src\Dapr.Workflow\Dapr.Workflow.csproj" />
   </ItemGroup>
 
