--- a/examples/Workflow/WorkflowConsoleApp/Properties/launchSettings.json
+++ b/examples/Workflow/WorkflowConsoleApp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "OrderingWebApi": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
