--- a/src/Dapr.TestContainers/Dapr.TestContainers.csproj
+++ b/src/Dapr.TestContainers/Dapr.TestContainers.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Testcontainers" Version="4.9.0" />
+        <PackageReference Include="Testcontainers" />
     </ItemGroup>
 
 </Project>
