--- a/src/Dapr.TestContainers/Dapr.TestContainers.csproj
+++ b/src/Dapr.TestContainers/Dapr.TestContainers.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Testcontainers" />
     </ItemGroup>
 
