--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -86,6 +86,10 @@ jobs:
     - name: Build
       # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
       run: dotnet build --configuration release /p:GITHUB_ACTIONS=false
+    - name: Prepare writable temporary directory
+      run: |
+        sudo mkdir -p /tmp/dapr-scheduler
+        sudo chmod -R 777 /tmp/dapr-scheduler
     - name: Test
       id: tests
       continue-on-error: true # proceed if tests fail to allow for the report generation in master or next step failure in PR
