--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -70,9 +70,9 @@ jobs:
         with:
           dotnet-version: ${{ matrix.install-version }}
           dotnet-quality: 'ga' # Prefer a GA release, but use the RC if not available
-      - name: Build
-        # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
-        run: dotnet build --configuration release /p:GITHUB_ACTIONS=false
+#      - name: Build
+#        # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
+#        run: dotnet build --configuration release /p:GITHUB_ACTIONS=false
       - name: Integration Tests
         id: integration-tests-v2
         continue-on-error: false # proceed if tests fail to allow for the report generation in master or next step failure in PR
@@ -81,7 +81,6 @@ jobs:
             dotnet test "$project" \
             --configuration release \
             --framework ${{ matrix.framework }} \
-            --no-build \
             --no-restore \
             --logger "trx;LogFilePrefix=${{ matrix.prefix }}" \
             --logger "GitHubActions;report-warnings=false" \
